--- a/style.css
+++ b/style.css
@@ -24,171 +24,6 @@ html{
     box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after{
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-.msger{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 386px;
-    margin: 2px 10px;
-    height: calc(100% - 100px);
-    background: var(--msger-bg);
-    box-shadow: 0 15px 15px -5px rgba(0,0,0,0.2);
-}
-
-.msger-header{
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    background: #eee;
-    border-radius: 10px 10px 0px 0px;
-    color: #555;
-}
-
-.msger-header-title{
-    display: flex;
-    align-items: center;
-}
-
-.msger-header-title img{
-    height: 2.5rem;
-    width: auto;
-}
-
-.msger-header-title p{
-    letter-spacing: 1px;
-    font-size: 1.8rem;
-    font-weight: bold;
-    color: #333;
-}
-
-.msger-chat{
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
-}
-
-.msger-chat::-webkit-scrollbar{
-    width: 6px;
-}
-
-.msger-chat::-webkit-scrollbar-track{
-    background: #ddd;
-}
-
-.msger-chat::-webkit-scrollbar-thumb{
-    background: #bdbdbd;
-    border-radius: 10px;
-}
-
-.msg{
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 10px;
-}
-
-.msg:last-of-type{
-    margin: 0;
-}
-
-.msg-img{
-    width: 60px;
-    height: 60px;
-    margin-right: 10px;
-    border-radius: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.msg-bubble{
-    max-width: 350px;
-    padding: 15px;
-    border-radius: 15px;
-    background: var(--left-msg-bg);
-}
-
-.msg-info{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.msg-info-name{
-    margin-right: 10px;
-    font-weight: bold;
-}
-
-.msg-info-time{
-    font-size: 0.85em;
-}
-
-.left-msg .msg-bubble{
-    color: #fff;
-    border-bottom-left-radius: 0;
-}
-
-.right-msg{
-    flex-direction: row-reverse;
-}
-
-.right-msg .msg-bubble{
-    background: var(--right-msg-bg);
-    color: #000;
-    border-bottom-right-radius: 0;
-}
-
-.right-msg .msg-img{
-    margin: 0 0 0 10px;
-}
-
-.msger-inputarea{
-    display: flex;
-    padding: 10px;
-    background: #a6e5e5;
-    border-radius: 10px;
-    
-}
-
-.msger-inputarea *{
-    padding: 5px;
-    border: none;
-    border-radius: 3px;
-    font-size: 1em;
-}
-
-.msger-input{
-    flex: 1;
-      border: none;
-      outline: 2px dotted #4a60d4;
-      outline-offset: -2px;
-      padding: 12px 16px;
-      border-radius: 24px;
-      background: #f0f0f0;
-      font-size: 15px;
-      transition: all 0.3s;
-}
-
-.msger-send-btn{
-    margin-left: 10px;
-    background: transparent;
-    color: #fff;
-    font-size: 1.5rem;
-    cursor: pointer;
-}
-
-.msger-chat{
-    background-color: #fcfcfe;
-}
-
 .autoshow{
     animation: text-appear both;
     animation-timeline: view() ;
@@ -205,7 +40,7 @@ html{
     }
 }
 
-#courses, #purpose, #encompasses {
+#purpose, #encompasses {
     animation: section-appear both;
      animation-timeline: view(50% 0.1%);
 }
@@ -620,3 +455,4 @@ button#home-button:hover+.home-content {
     height: 100%;
     border: none;
 }
+
